fix align: logo/header

--- a/styles.css
+++ b/styles.css
@@ -449,7 +449,7 @@ a:hover {
     #btn-mobile {
         display: flex;
         padding: .5rem 1rem;
-        margin-left: 25rem;
+        margin-left: 16rem;
         font-size: 1rem;
         border: none;
         background: none;
